--- a/index.html
+++ b/index.html
@@ -99,23 +99,44 @@
                 <div class="card w-96 bg-base-100 shadow-xl">
                     <figure><img src="/images/parallelogram.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">Triangle</h2>
-                      <p>Area (A) = 0.5 X b X h</p>
+                      <h2 class="card-title">Parallelogram</h2>
+                      <p>Area (A) = b X h</p>
                       <p>
-                        <input type="text" class="border text-xl w-24 px-2 bg-gray-200" placeholder="base" name="" id="triangle-base">
+                        <input type="text" class="border text-xl w-24 px-2 bg-gray-200" placeholder="base" name="" id="parallelogram-base">
                         <span class="ml-2">cm</span>
                       </p>
                       <p>
-                        <input type="text" class="border text-xl w-24 px-2 bg-gray-200" placeholder="height" name="" id="triangle-height">
+                        <input type="text" class="border text-xl w-24 px-2 bg-gray-200" placeholder="height" name="" id="parallelogram-height">
                         <span class="ml-2">cm</span>
                       </p>
-                      <p class="text-2xl font-semibold">Area: <span  id="triangle-area" class="font-medium">0</span> cm<sup>2</sup></p>
+                      <p class="text-2xl font-semibold">Area: <span  id="parallelogram-area" class="font-medium">0</span> cm<sup>2</sup></p>
                       <div class="card-actions">
-                        <button onclick="calculateTriangleArea()" class="btn btn-primary w-full">Calculate</button>
+                        <button onclick="calculateParallelogramArea()" class="btn btn-primary w-full">Calculate</button>
                       </div>
                     </div>
                   </div>
 
+
+             <!-- Reactangle-card -->
+             <div class="card w-96 bg-base-100 shadow-xl">
+                <figure><img src="/images/ellipse.png" alt="Shoes" /></figure>
+                <div class="card-body">
+                  <h2 class="card-title">Ellipse</h2>
+                  <p>Area (A) = πab </p>
+                  <p>
+                    <input type="text" class="border text-xl w-24 px-2 bg-gray-200" placeholder="a" name="" id="ellipse-first-radius">
+                    <span class="ml-2">cm</span>
+                  </p>
+                  <p>
+                    <input type="text" class="border text-xl w-24 px-2 bg-gray-200" placeholder="b" name="" id="ellipse-second-radius">
+                    <span class="ml-2">cm</span>
+                  </p>
+                  <p class="text-2xl font-semibold">Area: <span  id="ellipse-area" class="font-medium">0</span> cm<sup>2</sup></p>
+                  <div class="card-actions">
+                    <button onclick="calculateEllipseArea()" class="btn btn-primary w-full">Calculate</button>
+                  </div>
+                </div>
+              </div>      
 
              
 
