--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                       <h2 class="card-title">Triangle</h2>
                       <p>Area (A) = 0.5 X b X h</p>
                       <p>
-                        <input type="text" class="border text-xl w-24 px-2 bg-gray-200" placeholder="base" name="" id="triangle-base">
+                        <input type="number" class="border text-xl w-24 px-2 bg-gray-200" placeholder="base" name="" id="triangle-base">
                         <span class="ml-2">cm</span>
                       </p>
                       <p>
-                        <input type="text" class="border text-xl w-24 px-2 bg-gray-200" placeholder="height" name="" id="triangle-height">
+                        <input type="number" class="border text-xl w-24 px-2 bg-gray-200" placeholder="height" name="" id="triangle-height">
                         <span class="ml-2">cm</span>
                       </p>
                       <p class="text-2xl font-semibold">Area: <span  id="triangle-area" class="font-medium">0</span> cm<sup>2</sup></p>
@@ -143,9 +143,13 @@
             </div>
         
             <!-- area container -->
-            <div>
+            <div class="w-[400px]">
 
-                Area Calculator
+                <div class="text-4xl">Area Calculator
+
+                </div>
+
+                <div id="calculation-entry"></div>
 
             </div>
         </div>
